--- a/Week1/Week 1 Code.ipynb
+++ b/Week1/Week 1 Code.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello World\")"
    ]
@@ -33,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,212 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>area_type</th>\n",
-       "      <th>availability</th>\n",
-       "      <th>location</th>\n",
-       "      <th>size</th>\n",
-       "      <th>society</th>\n",
-       "      <th>total_sqft</th>\n",
-       "      <th>bath</th>\n",
-       "      <th>balcony</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Super built-up  Area</td>\n",
-       "      <td>19-Dec</td>\n",
-       "      <td>Electronic City Phase II</td>\n",
-       "      <td>2 BHK</td>\n",
-       "      <td>Coomee</td>\n",
-       "      <td>1056</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>39.07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Plot  Area</td>\n",
-       "      <td>Ready To Move</td>\n",
-       "      <td>Chikka Tirupathi</td>\n",
-       "      <td>4 Bedroom</td>\n",
-       "      <td>Theanmp</td>\n",
-       "      <td>2600</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>120.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Built-up  Area</td>\n",
-       "      <td>Ready To Move</td>\n",
-       "      <td>Uttarahalli</td>\n",
-       "      <td>3 BHK</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1440</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>62.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Super built-up  Area</td>\n",
-       "      <td>Ready To Move</td>\n",
-       "      <td>Lingadheeranahalli</td>\n",
-       "      <td>3 BHK</td>\n",
-       "      <td>Soiewre</td>\n",
-       "      <td>1521</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>95.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Super built-up  Area</td>\n",
-       "      <td>Ready To Move</td>\n",
-       "      <td>Kothanur</td>\n",
-       "      <td>2 BHK</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1200</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>51.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13315</th>\n",
-       "      <td>Built-up  Area</td>\n",
-       "      <td>Ready To Move</td>\n",
-       "      <td>Whitefield</td>\n",
-       "      <td>5 Bedroom</td>\n",
-       "      <td>ArsiaEx</td>\n",
-       "      <td>3453</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>231.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13316</th>\n",
-       "      <td>Super built-up  Area</td>\n",
-       "      <td>Ready To Move</td>\n",
-       "      <td>Richards Town</td>\n",
-       "      <td>4 BHK</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3600</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>400.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13317</th>\n",
-       "      <td>Built-up  Area</td>\n",
-       "      <td>Ready To Move</td>\n",
-       "      <td>Raja Rajeshwari Nagar</td>\n",
-       "      <td>2 BHK</td>\n",
-       "      <td>Mahla T</td>\n",
-       "      <td>1141</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>60.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13318</th>\n",
-       "      <td>Super built-up  Area</td>\n",
-       "      <td>18-Jun</td>\n",
-       "      <td>Padmanabhanagar</td>\n",
-       "      <td>4 BHK</td>\n",
-       "      <td>SollyCl</td>\n",
-       "      <td>4689</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>488.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13319</th>\n",
-       "      <td>Super built-up  Area</td>\n",
-       "      <td>Ready To Move</td>\n",
-       "      <td>Doddathoguru</td>\n",
-       "      <td>1 BHK</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>550</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>17.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>13320 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  area_type   availability                  location  \\\n",
-       "0      Super built-up  Area         19-Dec  Electronic City Phase II   \n",
-       "1                Plot  Area  Ready To Move          Chikka Tirupathi   \n",
-       "2            Built-up  Area  Ready To Move               Uttarahalli   \n",
-       "3      Super built-up  Area  Ready To Move        Lingadheeranahalli   \n",
-       "4      Super built-up  Area  Ready To Move                  Kothanur   \n",
-       "...                     ...            ...                       ...   \n",
-       "13315        Built-up  Area  Ready To Move                Whitefield   \n",
-       "13316  Super built-up  Area  Ready To Move             Richards Town   \n",
-       "13317        Built-up  Area  Ready To Move     Raja Rajeshwari Nagar   \n",
-       "13318  Super built-up  Area         18-Jun           Padmanabhanagar   \n",
-       "13319  Super built-up  Area  Ready To Move              Doddathoguru   \n",
-       "\n",
-       "            size  society total_sqft  bath  balcony   price  \n",
-       "0          2 BHK  Coomee        1056   2.0      1.0   39.07  \n",
-       "1      4 Bedroom  Theanmp       2600   5.0      3.0  120.00  \n",
-       "2          3 BHK      NaN       1440   2.0      3.0   62.00  \n",
-       "3          3 BHK  Soiewre       1521   3.0      1.0   95.00  \n",
-       "4          2 BHK      NaN       1200   2.0      1.0   51.00  \n",
-       "...          ...      ...        ...   ...      ...     ...  \n",
-       "13315  5 Bedroom  ArsiaEx       3453   4.0      0.0  231.00  \n",
-       "13316      4 BHK      NaN       3600   5.0      NaN  400.00  \n",
-       "13317      2 BHK  Mahla T       1141   2.0      1.0   60.00  \n",
-       "13318      4 BHK  SollyCl       4689   4.0      1.0  488.00  \n",
-       "13319      1 BHK      NaN        550   1.0      1.0   17.00  \n",
-       "\n",
-       "[13320 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m\\alejandro-echaniz\\Tamid-TechEdu-S22\\Week1\\Week 1 Code.ipynb Cell 6'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell://github/alejandro-echaniz/Tamid-TechEdu-S22/Week1/Week%201%20Code.ipynb#ch0000005vscode-vfs?line=0'>1</a>\u001b[0m df\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -265,125 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>area_type</th>\n",
-       "      <th>availability</th>\n",
-       "      <th>location</th>\n",
-       "      <th>size</th>\n",
-       "      <th>society</th>\n",
-       "      <th>total_sqft</th>\n",
-       "      <th>bath</th>\n",
-       "      <th>balcony</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Super built-up  Area</td>\n",
-       "      <td>19-Dec</td>\n",
-       "      <td>Electronic City Phase II</td>\n",
-       "      <td>2 BHK</td>\n",
-       "      <td>Coomee</td>\n",
-       "      <td>1056</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>39.07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Plot  Area</td>\n",
-       "      <td>Ready To Move</td>\n",
-       "      <td>Chikka Tirupathi</td>\n",
-       "      <td>4 Bedroom</td>\n",
-       "      <td>Theanmp</td>\n",
-       "      <td>2600</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>120.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Built-up  Area</td>\n",
-       "      <td>Ready To Move</td>\n",
-       "      <td>Uttarahalli</td>\n",
-       "      <td>3 BHK</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1440</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>62.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Super built-up  Area</td>\n",
-       "      <td>Ready To Move</td>\n",
-       "      <td>Lingadheeranahalli</td>\n",
-       "      <td>3 BHK</td>\n",
-       "      <td>Soiewre</td>\n",
-       "      <td>1521</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>95.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Super built-up  Area</td>\n",
-       "      <td>Ready To Move</td>\n",
-       "      <td>Kothanur</td>\n",
-       "      <td>2 BHK</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1200</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>51.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              area_type   availability                  location       size  \\\n",
-       "0  Super built-up  Area         19-Dec  Electronic City Phase II      2 BHK   \n",
-       "1            Plot  Area  Ready To Move          Chikka Tirupathi  4 Bedroom   \n",
-       "2        Built-up  Area  Ready To Move               Uttarahalli      3 BHK   \n",
-       "3  Super built-up  Area  Ready To Move        Lingadheeranahalli      3 BHK   \n",
-       "4  Super built-up  Area  Ready To Move                  Kothanur      2 BHK   \n",
-       "\n",
-       "   society total_sqft  bath  balcony   price  \n",
-       "0  Coomee        1056   2.0      1.0   39.07  \n",
-       "1  Theanmp       2600   5.0      3.0  120.00  \n",
-       "2      NaN       1440   2.0      3.0   62.00  \n",
-       "3  Soiewre       1521   3.0      1.0   95.00  \n",
-       "4      NaN       1200   2.0      1.0   51.00  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m\\alejandro-echaniz\\Tamid-TechEdu-S22\\Week1\\Week 1 Code.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell://github/alejandro-echaniz/Tamid-TechEdu-S22/Week1/Week%201%20Code.ipynb#ch0000006vscode-vfs?line=0'>1</a>\u001b[0m df\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -392,103 +85,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bath</th>\n",
-       "      <th>balcony</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>13247.000000</td>\n",
-       "      <td>12711.000000</td>\n",
-       "      <td>13320.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>2.692610</td>\n",
-       "      <td>1.584376</td>\n",
-       "      <td>112.565627</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>1.341458</td>\n",
-       "      <td>0.817263</td>\n",
-       "      <td>148.971674</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>72.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>120.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>3600.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               bath       balcony         price\n",
-       "count  13247.000000  12711.000000  13320.000000\n",
-       "mean       2.692610      1.584376    112.565627\n",
-       "std        1.341458      0.817263    148.971674\n",
-       "min        1.000000      0.000000      8.000000\n",
-       "25%        2.000000      1.000000     50.000000\n",
-       "50%        2.000000      2.000000     72.000000\n",
-       "75%        3.000000      2.000000    120.000000\n",
-       "max       40.000000      3.000000   3600.000000"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m\\alejandro-echaniz\\Tamid-TechEdu-S22\\Week1\\Week 1 Code.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell://github/alejandro-echaniz/Tamid-TechEdu-S22/Week1/Week%201%20Code.ipynb#ch0000007vscode-vfs?line=0'>1</a>\u001b[0m df\u001b[39m.\u001b[39mdescribe()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -543,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
