--- a/Week1/gKorada-week1.ipynb
+++ b/Week1/gKorada-week1.ipynb
@@ -2,34 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/GouthamKorada/Tamid-TechEdu-S22/Week1/gKorada-week1.ipynb Cell 1'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/GouthamKorada/Tamid-TechEdu-S22/Week1/gKorada-week1.ipynb#ch0000000?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mHello World\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/GouthamKorada/Tamid-TechEdu-S22/Week1/gKorada-week1.ipynb#ch0000000?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/GouthamKorada/Tamid-TechEdu-S22/Week1/gKorada-week1.ipynb#ch0000000?line=2'>3</a>\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39mgran_turismo_gt6.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/GouthamKorada/Tamid-TechEdu-S22/Week1/gKorada-week1.ipynb#ch0000000?line=3'>4</a>\u001b[0m df\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
+     "data": {
+      "text/plain": [
+       "0          AC Cars\n",
+       "1              AEM\n",
+       "2           Abarth\n",
+       "3           Abarth\n",
+       "4           Abarth\n",
+       "           ...    \n",
+       "1265    Volkswagen\n",
+       "1266    Volkswagen\n",
+       "1267         Volvo\n",
+       "1268         Volvo\n",
+       "1269         Volvo\n",
+       "Name: brand, Length: 1270, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Hello World\")\n",
     "import pandas as pd\n",
     "df = pd.read_csv(\"gran_turismo_gt6.csv\")\n",
     "df\n",
-    "df.head()"
+    "df.head()\n",
+    "df['brand']"
    ]
   }
  ],
@@ -52,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.1"
   },
   "orig_nbformat": 4
  },
