--- a/Week3/alejandro-week3.ipynb
+++ b/Week3/alejandro-week3.ipynb
@@ -14,7 +14,7 @@
     "# 28 March 2022, Alejandro Echaniz\n",
     "# -----------------------------------------------------------\n",
     "\n",
-    "# importing statements\n",
+    "# importing statements for accessing JSON + CSV files\n",
     "import json\n",
     "import csv\n",
     "import pandas as pd"
