Adding Week 5 Slides code to class repo.

--- a/Week5/Week 5 Code.ipynb
+++ b/Week5/Week 5 Code.ipynb
@@ -2893,6 +2893,22 @@
    "source": [
     "## This plot STILL tells us nothing. This is why we clean our data before visualization! ##"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### I like df6, so I will save that as a new file ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df6.to_csv('cleaned_dataset.csv')"
+   ]
   }
  ],
  "metadata": {
