Edits: week 4 hw and creation of hw5

--- a/Week4/alejandro-week4.ipynb
+++ b/Week4/alejandro-week4.ipynb
@@ -1280,7 +1280,7 @@
    ],
    "source": [
     "# step 2e. utulizing .loc method\n",
-    "df2.loc[df2.title.str.contains(\"Black Panther\")]"
+    "d3 = df2.loc[df2.title.str.contains(\"Black Panther\")]"
    ]
   },
   {
