--- a/Week5/alejandro-week5.ipynb
+++ b/Week5/alejandro-week5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,9 @@
     "# CSV file and compressing the dataframe into something\n",
     "# more manageable and \"cleaner\" to work with\n",
     "#\n",
-    "# NOTE: CSV file provides information on ...\n",
+    "# NOTE: CSV file contains listings of all the movies + tv\n",
+    "#       shows availible on Netflix, accompanied by details\n",
+    "#       like cast, directors, ratings, release year, etc...\n",
     "#\n",
     "# 11 April 2022, Alejandro Echaniz\n",
     "# -----------------------------------------------------------\n",
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -302,19 +304,21 @@
        "[8807 rows x 12 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# importing the csv file + assigning and reading it as a dataframe\n",
+    "\n",
     "netflix_df = pd.read_csv(\"ae_dataset.csv\")\n",
     "netflix_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -543,19 +547,21 @@
        "[8807 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# dataframe 2 --> selecting the preferred columns + assigning them to new df variable\n",
+    "\n",
     "df2 = netflix_df[['type', 'title', 'director', 'cast', 'country', 'release_year', 'rating', 'duration', 'listed_in']]\n",
     "df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +790,7 @@
        "[5332 rows x 9 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1027,13 +1033,14 @@
        "[2485 rows x 9 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# dataframe #4 --> removing all \n",
+    "# dataframe #4 --> creating new df variable + assigning it media only released from the united states\n",
+    "#   - made possible via .loc + .contains\n",
     "\n",
     "df4 = df3.loc[df3.country.str.contains(\"United States\")]\n",
     "df4"
@@ -1041,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1283,23 +1290,81 @@
        "[682 rows x 9 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# dataframe #5 --> creating new df + assigning within it only media that is rated R within \"rating\" col\n",
+    "\n",
     "df5 = df4.loc[df4.rating.str.contains(\"R\")]\n",
     "df5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Converting the \"cleaned\" df to a readable csv file\n",
+    "\n",
     "df5.to_csv('ae_cleaned_ds.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>release_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>release_year</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              release_year\n",
+       "release_year           1.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating a corrolation matrix to observe corrolations between numerical columns\n",
+    "\n",
+    "df5.corr()"
    ]
   }
  ],
