Fixing null hypothesis

--- a/Week7/Week 7 Code.ipynb
+++ b/Week7/Week 7 Code.ipynb
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our null hypothesis is that the mean price and mean total sqft are equal. Our alternate hypothesis states our means are unequal but there is a relation. We know the alternate hypothesis is true, but we can never be 100%. Enter: **the linear regression.**"
+    "Our null hypothesis is that there is no change between price and total sqft. Our alternate hypothesis states the average rate of change between price and total_sqft is not 0. We know the alternate hypothesis is true, but we can never be 100%. Enter: **the linear regression.**"
    ]
   },
   {
