--- a/Week7/Week 7 Code.ipynb
+++ b/Week7/Week 7 Code.ipynb
@@ -658,7 +658,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems like our model is overshooting the predictions. This is referred to as **overfitting**. The higher the degree of your regression model, the more accurate our regressions. Let's compare our values using a residual."
+    "It seems like our model is keeping the predictions dense. This is referred to as **underfitting**. The higher the degree of your regression model, the more accurate our regressions. Let's compare our values using a residual."
    ]
   },
   {
