--- a/Final/DN-NR.ipynb
+++ b/Final/DN-NR.ipynb
@@ -23,9 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/dayanovich/tamidvscode/Tamid-TechEdu-S22/Final/DN-NR.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dayanovich/tamidvscode/Tamid-TechEdu-S22/Final/DN-NR.ipynb#ch0000003?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dayanovich/tamidvscode/Tamid-TechEdu-S22/Final/DN-NR.ipynb#ch0000003?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dayanovich/tamidvscode/Tamid-TechEdu-S22/Final/DN-NR.ipynb#ch0000003?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mstatsmodels\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapi\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msm\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dayanovich/tamidvscode/Tamid-TechEdu-S22/Final/DN-NR.ipynb#ch0000003?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -72,6 +84,13 @@
    "metadata": {},
    "source": [
     "### **Step 3: Data Integration**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### After converting our original dataset to a csv file, we can finally begin our data processing. We created our database to begin the integration process. Because we created the database, there wasn't much cleaning that needed to be done to integrate our data. \n"
    ]
   },
   {
@@ -719,19 +738,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "highest_stream"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Step 4: Data Integration**"
+    "###### We wanted to see the correlation between a songs streams and its genre based on Spotify's top 50 hits, so we began by making one dataframe consisting of just pop songs, the seemingly most popular genre within our database. "
    ]
   },
   {
@@ -786,6 +796,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### We then created a couple graphs to help us determine if pop is currently one of the most streamed song types on spotify. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "x = 'Streams'\n",
     "y = 'Genre'\n",
@@ -795,10 +819,7 @@
     "# line of best fit\n",
     "\n",
     "m, b = np.polyfit(df[x], df[y], 1)\n",
-    "plt.plot(df[x], m * df[x] + b)\n",
-    "\n",
-    "\n",
-    "# were trying to determine is pop is the most streamed song on spotify\n"
+    "plt.plot(df[x], m * df[x] + b)\n"
    ]
   },
   {
@@ -821,7 +842,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###### Based on these graphs we could conclude that there was a correlation - songs in the pop genre seem to be most streamed at the moment. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Data Validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df[['Streams']]\n",
+    "y = df[['Genre']]\n",
+    "regression = sm.OLS(x, y)\n",
+    "results = regression.fit()\n",
+    "print(results.summary())"
    ]
   }
  ],
