--- a/Final/DN-NR.ipynb
+++ b/Final/DN-NR.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### After converting our original dataset to a csv file, we can finally begin our data processing. We created our database to begin the integration process. Because we created the database, there wasn't much cleaning that needed to be done to integrate our data. \n"
+    "##### After converting our original dataset to a csv file, we can finally begin our data processing. We created our database to begin the integration process. Because we created the database, there wasn't much cleaning that needed to be done to integrate our data. \n"
    ]
   },
   {
@@ -752,7 +752,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We wanted to see the correlation between a songs streams and the length of the song based on Spotify's top 50 hits, so we began by making one dataframe consisting of just pop songs, the seemingly most popular genre within our database. "
+    "##### We wanted to see the correlation between a songs streams and the length of the song based on Spotify's top 50 hits, so we began by making one dataframe consisting of just pop songs, the seemingly most popular genre within our database. "
    ]
   },
   {
@@ -1219,7 +1219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We then created a couple graphs to help us determine the correlation between the duration of a song (in seconds) and the number of streams a song has. Obviously there are many other factors that come in to play, but we wanted to explore the correlation specifically within Today's Top Hits on Spotify. "
+    "##### We then created a couple graphs to help us determine the correlation between the duration of a song (in seconds) and the number of streams a song has. Obviously there are many other factors that come in to play, but we wanted to explore the correlation specifically within Today's Top Hits on Spotify. "
    ]
   },
   {
@@ -1588,7 +1588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Based on these graphs we could conclude that there was a correlation - songs in the pop genre seem to be most streamed at the moment. "
+    "##### Based on these graphs we could conclude that there was a correlation - songs in the pop genre seem to be most streamed at the moment. "
    ]
   },
   {
